syntax = "proto3";
package helloworld;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc LotsOfReplies(HelloRequest) returns (stream HelloReply);
    rpc LotsOfGreetings(stream HelloRequest) returns (HelloReply);
    rpc BidiHello(stream HelloRequest) returns (stream HelloReply);
}

service AnotherGreeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc Delay (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    // Request message contains the name to be greeted
    string name = 1;
}

message HelloReply {
    // Reply contains the greeting message
    string message = 1;
}
